# ai-newsletter-service

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
design/: newsletter_admin.pen
docs/superpowers/plans/: 2026-05-21-company-interest-rag.md  2026-05-21-trend-analysis.md  2026-05-22-competitor-monitoring.md  2026-05-22-department-digest.md  2026-05-22-monthly-digest.md  2026-05-22-performance-dashboard.md  (+2 more)
hitl/: 260515-iteration-4-5-완료-검수UI-디자인.md  260520-phase2-완료-slack발송-부서별팁.md  260521-phase3-트렌드분석-trends.md  260521-phase3-회사관심사-rag-corpus.md  260521-세션마무리-phase3-진행.md  260523-운영안정화-precommit-pr1.md
migrations/: env.py  script.py.mako
migrations/versions/: 065491a8e1b4_add_competitors_table.py  0ecb9c4795ca_add_processed_items_table.py  27b382d1bde7_add_departments_and_department_tips_.py  4f66b396d632_add_audience_column_to_newsletter_issues.py  774fdde3e389_add_newsletter_issues_table.py  7807e2a15a63_add_run_logs_table.py  7fefd2fe33c8_extend_sources_type_check_to_include_.py  9638e8b6379e_add_embedding_columns_to_processed_items.py  a57208570cf9_add_sources_table.py  c516264ee115_add_raw_items_table.py  d53f7d9672d0_add_company_interests_table.py  d6a907364141_add_notion_archive_columns_to_.py  ddc1e6feada8_add_context_chunks_table.py  f5662d6e7ec4_add_slack_sent_at_to_newsletter_issues.py
plan/: ai_newsletter_service_plan.md
prompts/common/: keyword-relevance-classifier.md  track-classifier.md
prompts/expert-news/: expert-cluster-summarizer.md  expert-importance-scorer.md  expert-news-writer.md
prompts/monthly/: digest-narrative.md
prompts/practical-insight/: practical-department-tips.md  practical-insight-writer.md  practical-usecase-summarizer.md
src/newsletter/: __init__.py  cli.py
templates/: newsletter-executive.md.j2  newsletter-technical.md.j2  newsletter.md.j2
tests/: conftest.py  test_config_llm.py  test_embeddings.py  test_llm.py  test_llm_models.py  test_llm_providers.py  test_prompts.py  test_run_context.py  test_smoke.py
tests/core/: test_report_html.py  test_text.py
tests/models/: test_company_interest.py  test_newsletter_issue.py  test_run_log.py
(+245 files in other folders)
