[project]
name = "newsletter"
version = "0.1.0"
description = "Internal AI intelligence newsletter automation"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "Proprietary" }
authors = [{ name = "supercar640" }]

dependencies = [
    "typer>=0.15.0",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "httpx[brotli]>=0.28",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12",
    "yt-dlp>=2025.1.15",
    "faster-whisper>=1.0.3",
    "anthropic>=0.42",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "python-multipart>=0.0.29",
    "markdown-it-py>=4.2.0",
]

[project.scripts]
newsletter = "newsletter.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "freezegun>=1.5",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsletter"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (formatter handles)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"] # allow assert False in tests

[tool.ruff.lint.flake8-bugbear]
# Typer / Click and FastAPI idiom — Option()/Argument()/Depends()/Query() in
# defaults return descriptor objects, not mutable state.
extend-immutable-calls = [
    "typer.Option",
    "typer.Argument",
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.File",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "integration: integration test (may be slower)",
]
